welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:7: error: value elif is not a member of Unit
possible cause: maybe a semicolon is missing before `value elif'?
  } elif (instruction == "L"){
    ^BDRBuggle:7: error: Boolean does not take parameters
  } elif (instruction == "L"){
                             ^BDRBuggle:10: error: Boolean does not take parameters
  }elif (instruction == "I"){
                            ^BDRBuggle:14: error: Boolean does not take parameters
  }elif (instruction == "A"){
                            ^BDRBuggle:16: error: Boolean does not take parameters
  }elif (instruction == "B") {
                             ^BDRBuggle:19: error: Boolean does not take parameters
  } elif ( instruction == "C"){
                              ^BDRBuggle:23: error: Boolean does not take parameters
  }elif (instruction == "Z") {
                             ^BDRBuggle:25: error: Boolean does not take parameters
  } elif (instruction == "Y") {
                              ^BDRBuggle:28: error: Boolean does not take parameters
  } elif (instruction == "X") {
                              ^BDRBuggle:32: error: not found: value break
  } else {break}
          ^