welcome.lessons.welcome.bdr.BDR.scala.code
var instruction: String = ""
while(estSurMessage()){
  instruction = litMessage()
  if (instruction == "R") {
    droite()
    avance()
  } elif (instruction == "L"){
    gauche()
    avance()
  }elif (instruction == "I"){
    gauche()
    gauche()
    avance()
  }elif (instruction == "A"){
    avance()
  }elif (instruction == "B") {
    avance()
    avance()
  } elif ( instruction == "C"){
    avance()
    avance()
    avance()
  }elif (instruction == "Z") {
    recule()
  } elif (instruction == "Y") {
    recule()
    recule()
  } elif (instruction == "X") {
    recule()
    recule()
    recule()
  } else {break}
}